Fix BUG:472073, use font-size for line-height ratio calculation.

Sometimes ascent-descent is larger than the font-size. Percentage
also uses font-size but also has different parsing, and thus should
already have been covered.

Closes !1850

BUG:472073